added Mary's Section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Group Presentation</title>
 </head>
 <body>
-  
+  <!-- Mary's Section -->
+  <section>
+    <h2>Mary section</h2>
+  </section>
+  <!-- Mary's Section -->
 </body>
 </html>
