Added Kostas Section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Group Presentation</title>
 </head>
 <body>
-  
+  <!--  Kostas Section  -->
+    <section> Kostas Section </section>
+  <!--  Kostas Section  -->
+
 </body>
 </html>
