Alex aria section update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,29 @@
 			<!--End Anna's Section-->
 
 			<!-- Alex's Section aria-details -->
-			<section>Slide 4</section>
+			<section>
+				<section>
+					<h1>aria-details</h1>
+					<p><mark>Aria-details</mark> provides a set of information and data in a hierarchical and organized manner.</p>
+					<p>Such information may include illustrations, external links, or any form of extended information.</p>
+				</section>
+				<section>
+					<p>extended information that describes</p>
+					<p>the illustration from the artworks presented</p>
+					<pre>
+						<code data-line-numbers="1-2|3,7|4-6">
+							<script type="text/template"><img src="ledemoiselles.jpg"
+alt="​​Les Demoiselles dAvignon" aria-details="det">
+<details id="det">
+<p>The Les Demoiselles dAvignon is a modern art painting by
+Pablo Picasso that diverts from traditional techniques of 
+painting.</p>
+</details>
+							</script>
+						</code>
+					</pre>
+				</section>
+			</section>
 			<!--End Alex's Section-->
 
 			<!-- Meredith's Section aria-autocomplete -->
