added title & resource sections

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-
+			<!--title-->
+			<section>
+				<h1>ARIA LABELS &AMP; A11y</h1>
+			</section>
 			<!-- Leon's Section aria-keyshortcuts -->
 			<section>Slide 1</section>
 			<!--End Leo's Section-->
@@ -73,6 +76,10 @@ painting.</p>
 			<section>slide 8</section>
 			<!--End Mary's Section-->
 
+			<!--useful resources-->
+			<section>
+				<h2>Useful resources</h2>
+			</section>
 		</div>
 	</div>
 
