added my section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ painting.</p>
 			<section>slide 8</section>
 			<!--End Mary's Section-->
 
+			<!-- Vangelis' Section aria-valuetext-->
+			<section>slide 8</section>
+			<!--End Vangelis' Section aria-valuetext--->
+
 			<!--useful resources-->
 			<section>
 				<h2>Useful resources</h2>
