--- a/index.html
+++ b/index.html
@@ -151,7 +151,24 @@ painting.</p>
 			<!--End Mary's Section-->
 
 			<!-- Vangelis' Section aria-valuetext-->
-			<section>slide 9</section>
+			<section>
+				<section> <h2>aria-valuetext</h2>
+							<p>The <mark>aria-valuetext</mark> attribute defines the human-readable text alternative of aria-valuenow for a range widget. 
+								Numbers — even percentages — aren't always user-friendly. Assistive technologies present <span class="aria-label-highlighted">aria-valuenow</span> as numeric values. </p>
+				</section>
+				<section> <p>If a progress bar is at 8%, what does that mean? <span class="aria-label-highlighted">aria-valuetext</span> provides a way of presenting the current value in a more user-friendly, 
+					human-understandable way. For example, a battery meter value might be conveyed as <span class="aria-label-highlighted">aria-valuetext="8% (34 minutes) remaining"</span>.</p>
+				</section>
+				<section> <p>The <span class="aria-label-highlighted">aria-valuetext</span> attribute is used with the aria-valuenow attribute, not instead of it, unless that value is not known.
+
+					<span class="aria-label-highlighted">aria-valuetext</span> is only needed when the numeric value of <span class="aria-label-highlighted">aria-valuenow</span> is not meaningful. For example, a range's values are numeric 
+					but may be used for non-numeric values, such as college class level. </p>
+				</section>
+				<section> <p>The values of <span class="aria-label-highlighted">aria-valuenow</span> for a 4-year college could range 
+					from 1 through 4, which indicate the position of each value in the value space. In this case, the <span class="aria-label-highlighted">aria-valuetext</span> could be one of the strings: 
+					"first year", "sophomore", "junior", and "senior".</p>
+				</section>
+			</section>
 			<!--End Vangelis' Section aria-valuetext--->
 
 			<!--useful resources-->
