--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ painting.</p>
 					human-understandable way. For example, a battery meter value might be conveyed as 
 					<span class="aria-label-highlighted">aria-valuetext="8% (34 minutes) remaining"</span>.</p>
 				</section>
-				<section> <p>The <span class="aria-label-highlighted">aria-valuetext</span> attribute is used with the aria-valuenow attribute, 
-					not instead of it, unless that value is not known.
+				<section> <p>The <span class="aria-label-highlighted">aria-valuetext</span> attribute is used with the 
+					<span class="aria-label-highlighted">aria-valuenow</span> attribute, not instead of it, unless that value is not known.
 					<span class="aria-label-highlighted">aria-valuetext</span> is only needed when the numeric value of 
 					<span class="aria-label-highlighted">aria-valuenow</span> is not meaningful. For example, a range's values are numeric 
 					but may be used for non-numeric values, such as college class level. </p>
