updated section aria-keyshortcuts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="dist/reset.css">
 	<link rel="stylesheet" href="dist/reveal.css">
 	<link rel="stylesheet" href="dist/theme/black.css">
+	<link rel="stylesheet" type="text/css"  href="css/style.css">
 
 	<!-- Theme used for syntax highlighted code -->
 	<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -43,7 +44,23 @@
 				<h1>ARIA LABELS &AMP; A11y</h1>
 			</section>
 			<!-- Leon's Section aria-keyshortcuts -->
-			<section>Slide 1</section>
+			<section id="aria-keyshortcuts">
+				<section id="aria-keyshortcuts-01" data-keyshortcuts-01="1">
+					<h2>aria-keyshortcuts property</h2>
+					<div class="gradient-border gradient-border-left">
+						<p class="gradient-border-01">Defines keyboard shortcuts that an author has implemented to activate or give focus to an element.</p>
+					</div>
+				</section>
+				<section id="aria-keyshortcuts-02" data-keyshortcuts-01="2">
+					<h3>The value of the aria-keyshortcuts attribute</h3>
+					<div class="gradient-border gradient-border-left">
+						<p class="gradient-border-02">It is a space-separated list of keyboard shortcuts that can be pressed to activate a command or textbox widget.<br /><br />
+						The keys defined in the shortcuts represent the physical keys pressed and not the actual characters generated.<br /><br />
+						Each keyboard shortcut consists of one or more tokens delimited by the plus sign ("+") representing zero or more modifier keys and exactly one non-modifier key that must be pressed simultaneously to activate the given shortcut.
+					</p> 
+					</div>
+				</section>
+			</section>
 			<!--End Leo's Section-->
 
 			<!--Jason Section aria-colindex -->
