Added Meredith's Section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@ painting.</p>
 
 			<!-- Meredith's Section aria-autocomplete -->
 			<section>slide 5</section>
+				<section>
+					<h1> Aria-autocomplete</h1>
+						<p><strong>The aria-autocomplete</strong> attribute indicates whether inputting text could trigger display of one or more predictions of the user's intended value for a combobox, searchbox, or textbox and specifies how predictions will be presented if they are made.</p>
+						
+						<p>The aria-autocomplete property only describes the type of predictive behavior for an input element for assistive technologies; it doesn't provide the functionality. The actual autocompletion should be provided using HTML attributes or JavaScript.
+						</p>
+				</section>
 			<!--End Meredith's Section-->
 
 			<!-- Solo's Section-->
