--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="dist/theme/black.css">
 	<link rel="stylesheet" type="text/css"  href="css/style.css">
 	<!-- prism for code styling -->
-	<link rel="stylesheet" type="text/css"  href="css/prism.css">
+	<!--<link rel="stylesheet" type="text/css"  href="css/prism.css">-->
 
 	<!-- Theme used for syntax highlighted code -->
 	<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -307,7 +307,7 @@ painting.</p>
 	<script src="plugin/markdown/markdown.js"></script>
 	<script src="plugin/highlight/highlight.js"></script>
 	<!-- prism for code styling -->
-	<script src="js/prism.js"></script> 
+	<!--<script src="js/prism.js"></script>-->
 
 
 	<script>
