revert Meredith's style i deleted accidentally

--- a/index.html
+++ b/index.html
@@ -322,9 +322,8 @@ painting.</p>
 			<!--End Alex's Section-->
 
 			<!-- Meredith's Section aria-autocomplete -->
-			<section>slide 5</section>
 
-			<section>
+			<section data-background-gradient="linear-gradient(to bottom, #00ffff, ##ffff66)">
 				<h2> Aria-autocomplete</h2>
 				<p>The aria-autocomplete attribute indicates whether inputting text could trigger display of one or more
 					predictions of the user's intended value for a combobox, searchbox, or textbox and specifies how predictions
