--- a/index.html
+++ b/index.html
@@ -493,6 +493,14 @@
 			<!--useful resources-->
 			<section>
 				<h2>Useful resources</h2>
+				<ul>
+				<li><a href="https://www.youtube.com/watch?v=z8xUCzToff8">Accessibility Fundamentals with Rob Dodson</a></li>
+				<li><a href="https://www.youtube.com/playlist?list=PLNYkxOF6rcICWx0C9LVWWVqvHlYJyqw7g">A11ycasts with Rob Dodson(playlist)
+</a></li>
+				<li><a href="https://www.youtube.com/watch?v=CNoz0TXG-vk">What is WAI-ARIA?</a></li>
+				<li><a href="https://www.youtube.com/watch?v=qdB8SRhqvFc&t=898s">ARIA, Accessibility APIs and coding like you give a damn! – Léonie Watson⭐⭐💫</a></li>
+				<li><a href=""></a></li>
+				</ul>
 			</section>
 		</div>
 	</div>
