--- a/index.html
+++ b/index.html
@@ -50,34 +50,7 @@
 					</ul>
 				</section>
 			</section>
-			<section>
-				<section>
-					<h2> Roles </h2>
-					<p>almost all html Built-in elements Have implicit roles</p>
-					<p>what does all mean here (all semantic elements like <mark>section</mark> <mark>main</mark>
-						<mark>h1</mark>
-						<mark>p</mark> )
-					</p>
-				</section>
-				<section>
-					<h2>semantic elements</h2>
-					<p> when we use something like <mark>
-							&lt;p&gt; </mark> Accessibility tree knows that it is paragraph tag and text will go inside it</p>
-					<p>inputs (since we have many inputs ) the `type` check box browser implicitly knows what is the purpose of
-						it
-						like its a
-						checkbox or email</p>
-
-				</section>
-				<section>
-					<h2>Non-semantic elements</h2>
-					<p><mark>div</mark> and <mark>span</mark> (mostly used)
-						are not semantic tags and are not attractive elements </p>
-					<mark>br</mark> , <mark>i</mark> tags use for styling purposes
-					<p>keyboard doesn't recognize content inside these
-						elements</p>
-				</section>
-			</section>
+			
 			<section>
 				<section>
 					<h2>As Developer How can make our website accessible</h2>
@@ -109,9 +82,38 @@
 						<li>Use alt attribute for images</li>
 						<li>and avoid using non-semantic tags like div and span but </li>
 						<li>If you 'fake' these with div and ARIA, you must ensure your content are keyboard accessible. </li>
-						<li> use ARIA attribute here comes the ARIA attribute</li>
+						<li> use ARIA attribute <mark>here comes the ARIA attribute</mark></li>
 					</ul>
 
+				</section>
+			</section>
+			<section>
+<h2>Html</h2>
+				<section>
+					<h2> Roles </h2>
+					<p>almost all html Built-in elements Have implicit roles</p>
+					<p>what does all mean here (all semantic elements like <mark>section</mark> <mark>main</mark>
+						<mark>h1</mark>
+						<mark>p</mark> )
+					</p>
+				</section>
+				<section>
+					<h2>semantic elements</h2>
+					<p> when we use something like <mark>
+							&lt;p&gt; </mark> Accessibility tree knows that it is paragraph tag and text will go inside it</p>
+					<p>inputs (since we have many inputs ) the `type` check box browser implicitly knows what is the purpose of
+						it
+						like its a
+						checkbox or email</p>
+			
+				</section>
+				<section>
+					<h2>Non-semantic elements</h2>
+					<p><mark>div</mark> and <mark>span</mark> (mostly used)
+						are not semantic tags and are not attractive elements </p>
+					<mark>br</mark> , <mark>i</mark> tags use for styling purposes
+					<p>keyboard doesn't recognize content inside these
+						elements</p>
 				</section>
 			</section>
 			<section>
