--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					</ul>
 				</section>
 			</section>
-			
+
 			<section>
 				<section>
 					<h2>As Developer How can make our website accessible</h2>
@@ -88,7 +88,7 @@
 				</section>
 			</section>
 			<section>
-<h2>Html</h2>
+				<h2>Html</h2>
 				<section>
 					<h2> Roles </h2>
 					<p>almost all html Built-in elements Have implicit roles</p>
@@ -105,7 +105,7 @@
 						it
 						like its a
 						checkbox or email</p>
-			
+
 				</section>
 				<section>
 					<h2>Non-semantic elements</h2>
@@ -496,12 +496,14 @@
 			<section>
 				<h2>Useful resources</h2>
 				<ul>
-				<li><a href="https://www.youtube.com/watch?v=z8xUCzToff8">Accessibility Fundamentals with Rob Dodson</a></li>
-				<li><a href="https://www.youtube.com/playlist?list=PLNYkxOF6rcICWx0C9LVWWVqvHlYJyqw7g">A11ycasts with Rob Dodson(playlist)
-</a></li>
-				<li><a href="https://www.youtube.com/watch?v=CNoz0TXG-vk">What is WAI-ARIA?</a></li>
-				<li><a href="https://www.youtube.com/watch?v=qdB8SRhqvFc&t=898s">ARIA, Accessibility APIs and coding like you give a damn! – Léonie Watson⭐⭐💫</a></li>
-				<li><a href=""></a></li>
+					<li><a href="https://www.youtube.com/watch?v=z8xUCzToff8">Accessibility Fundamentals with Rob Dodson</a></li>
+					<li><a href="https://www.youtube.com/playlist?list=PLNYkxOF6rcICWx0C9LVWWVqvHlYJyqw7g">A11ycasts with Rob
+							Dodson(playlist)
+						</a></li>
+					<li><a href="https://www.youtube.com/watch?v=CNoz0TXG-vk">What is WAI-ARIA?</a></li>
+					<li><a href="https://www.youtube.com/watch?v=qdB8SRhqvFc&t=898s">ARIA, Accessibility APIs and coding like you
+							give a damn! – Léonie Watson⭐⭐💫</a></li>
+					<li><a href=""></a></li>
 				</ul>
 			</section>
 		</div>
