--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			<!--title-->
 			<section>
 				<h1>A11y &AMP; ARIA LABELS </h1>
-				<img src="assets/aria-logo.png">
+				<img src="assets/aria-logo.png" alt="web accessibility logo">
 				<h2> group project</h2>
-				<p1> cohort 02, in<strong id="tech">tech</strong>gration </p1>
+				<p> cohort 02, in<strong id="tech">TECH</strong>gration </p>
 			</section>
 			<section>
 				<section>
@@ -38,41 +38,32 @@
 				</section>
 				<section>
 					<h2>What is web Accessibility</h2>
-					<p>Its is an idea that technology must be <mark>equally accessible</mark> to people <mark>with and
-							without
+					<p>Its an idea that technology must be <mark>equally accessible</mark> to people <mark>with and without
 							disabilities</mark></p>
 					<ul>
-						<li>Accessible Navigation or semantic Html</li>
+						<li>Accessible Navigation </li>
 						<li>Keyboard Accessibility (for screen reader when using the tab key to navigate)</li>
-						<li>Color Contrast (adressing people with vision impairments and/or using technology in
-							sunshine)</li>
+						<li>Color Contrast (Background and text color) </li>
+						<!--- (addressing people with vision impairments and/or using technology in sunshine) -->
 						<li>Headings and Structure</li>
+						<li>accessible names for interactive elements</li>
 						<li>Responsive Design</li>
-						<li>Testing and Validation</li>
 						<li>Descriptive Links</li>
+						<li>Alternative Text (Alt Text)</li>
 					</ul>
 				</section>
 			</section>
-
-
-
 			<section>
 				<section>
 					<h2>ARIA</h2>
 					<p>
-						ARIA — short for Accessible Rich Internet Applications — is a set of roles, states, and
-						properties which
-						can
-						be added to
-						HTML to describe the meaning and purpose of common user interface elements that don’t have
-						semantic tags
-						in
-						HTML
+						ARIA — short for <mark> Accessible Rich Internet Applications </mark> — defines a way to make web content
+						and web applications more accessible to people with disabilities.
 					</p>
 					<p>ARIA can be used to enhance an HTML document by providing additional accessibility information
 						about web
-						pages or other
-						parts of a webpage It provides</p>
+						pages </p>
+					<mark>No ARIA is better than bad ARIA.</mark>
 				</section>
 			</section>
 			<!-- Leon's Section aria-keyshortcuts -->
@@ -276,8 +267,7 @@
 						position with respect to the total number of columns within a <a
 							href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table" ;>table</a>, <a
 							href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid" ;>grid</a>, or <a
-							href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/treegrid_role"
-							;>treegrid.</a>
+							href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/treegrid_role" ;>treegrid.</a>
 					</blockquote>
 				</section>
 				<section>
@@ -339,22 +329,17 @@
 							<strong>interactive elements</strong>: such as <span class="aria-label-highlighted">a</span>
 							(when <span class="aria-label-highlighted">href</span>
 							attribute is present),
-							<span class="aria-label-highlighted">audio</span> and <span
-								class="aria-label-highlighted">video</span>
+							<span class="aria-label-highlighted">audio</span> and <span class="aria-label-highlighted">video</span>
 							(when controls attribute is present), <span class="aria-label-highlighted">input</span>,
 							<span class="aria-label-highlighted">select</span>,
-							<span class="aria-label-highlighted">button</span>, <span
-								class="aria-label-highlighted">textarea</span>.
+							<span class="aria-label-highlighted">button</span>, <span class="aria-label-highlighted">textarea</span>.
 						</li>
 						<li>
-							<strong>implicit landmark elements</strong>: such as <span
-								class="aria-label-highlighted">header</span>,
+							<strong>implicit landmark elements</strong>: such as <span class="aria-label-highlighted">header</span>,
 							<span class="aria-label-highlighted">footer</span>,
-							<span class="aria-label-highlighted">nav</span>, <span
-								class="aria-label-highlighted">main</span>, <span
+							<span class="aria-label-highlighted">nav</span>, <span class="aria-label-highlighted">main</span>, <span
 								class="aria-label-highlighted">aside</span>,
-							<span class="aria-label-highlighted">section</span>, and <span
-								class="aria-label-highlighted">form</span>.
+							<span class="aria-label-highlighted">section</span>, and <span class="aria-label-highlighted">form</span>.
 						</li>
 					</ul>
 				</section>
@@ -371,8 +356,8 @@
 					<div class="r-stack">
 						<img class="fragment fade-out" data-fragment-index="0" src="assets/aria-label-example1.png"
 							alt="code-example1">
-						<img class="fragment current-visible" data-fragment-index="0"
-							src="assets/aria-label-example2.png" alt="code-example2">
+						<img class="fragment current-visible" data-fragment-index="0" src="assets/aria-label-example2.png"
+							alt="code-example2">
 						<img class="fragment" src="assets/aria-label-example3.png" alt="code-example3">
 					</div>
 					<p> Take 3 mins and see
@@ -455,8 +440,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 							class="aria-label-highlighted">aria-valuenow</span> as numeric values. </p>
 				</section>
 				<section>
-					<p>If a progress bar is at 8%, what does that mean? <span
-							class="aria-label-highlighted">aria-valuetext</span>
+					<p>If a progress bar is at 8%, what does that mean? <span class="aria-label-highlighted">aria-valuetext</span>
 						provides a way of presenting the current value in a more user-friendly,
 						human-understandable way. For example, a battery meter value might be conveyed as
 						<span class="aria-label-highlighted">aria-valuetext="8% (34 minutes) remaining"</span>.
@@ -491,38 +475,38 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<!--useful resources-->
 			<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 				<h4 class="aria-label-heading">Useful resources</h4>
-			 <div class="div-useful-resources">
-				<ol>
-					<li>
-						<a href="https://w3c.github.io/aria/#aria-keyshortcuts">
-							The World Wide Web Consortium (W3C) &mdash; aria-keyshortcuts</a>
-					</li>
-					<li>
-						<a href="https://psdtowp.net/html-codes-special-characters.html	">
-							HTML codes and HTML special characters</a>
-					</li>
-					<li>
-						<a href="https://www.youtube.com/watch?v=z8xUCzToff8">
-							Accessibility Fundamentals with Rob Dodson</a>
-					</li>
-					<li>
-						<a href="https://www.youtube.com/playlist?list=PLNYkxOF6rcICWx0C9LVWWVqvHlYJyqw7g">
-							A11ycasts with Rob Dodson(playlist)</a>
-					</li>
-					<li>
-						<a href="https://www.youtube.com/watch?v=CNoz0TXG-vk">
-							What is WAI-ARIA?</a>
-					</li>
-					<li>
-						<a href="https://www.youtube.com/watch?v=qdB8SRhqvFc&t=898s">
-							ARIA, Accessibility APIs</a>
-					</li>
-					<li>
-						<a href="https://www.aditus.io/aria/aria-label/">
-							ADITUS-The accessibility tool for your team</a>
-					</li>
-				</ol>
-			</div>
+				<div class="div-useful-resources">
+					<ol>
+						<li>
+							<a href="https://w3c.github.io/aria/#aria-keyshortcuts">
+								The World Wide Web Consortium (W3C) &mdash; aria-keyshortcuts</a>
+						</li>
+						<li>
+							<a href="https://psdtowp.net/html-codes-special-characters.html	">
+								HTML codes and HTML special characters</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=z8xUCzToff8">
+								Accessibility Fundamentals with Rob Dodson</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/playlist?list=PLNYkxOF6rcICWx0C9LVWWVqvHlYJyqw7g">
+								A11ycasts with Rob Dodson(playlist)</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=CNoz0TXG-vk">
+								What is WAI-ARIA?</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=qdB8SRhqvFc&t=898s">
+								ARIA, Accessibility APIs</a>
+						</li>
+						<li>
+							<a href="https://www.aditus.io/aria/aria-label/">
+								ADITUS-The accessibility tool for your team</a>
+						</li>
+					</ol>
+				</div>
 			</section>
 		</div>
 	</div>
