updating my section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section>
 				<section>
 					<p>what is A11Y?</p>
-					<p>A ccessibilit y </p>
+					<p>A ccessibilit y</p>
 					<p>A 11 y </p>
 				</section>
 				<section>
@@ -431,7 +431,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 
 			<!-- Vangelis' Section aria-valuetext-->
 			<section>
-				<section>
+				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 					<h2>aria-valuetext</h2>
 					<p>The <mark>aria-valuetext</mark> attribute defines the human-readable text alternative of
 						aria-valuenow
@@ -439,14 +439,14 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 						Numbers — even percentages — aren't always user-friendly. Assistive technologies present <span
 							class="aria-label-highlighted">aria-valuenow</span> as numeric values. </p>
 				</section>
-				<section>
+				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 					<p>If a progress bar is at 8%, what does that mean? <span class="aria-label-highlighted">aria-valuetext</span>
 						provides a way of presenting the current value in a more user-friendly,
 						human-understandable way. For example, a battery meter value might be conveyed as
 						<span class="aria-label-highlighted">aria-valuetext="8% (34 minutes) remaining"</span>.
 					</p>
 				</section>
-				<section>
+				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 					<p>The <span class="aria-label-highlighted">aria-valuetext</span> attribute is used with the
 						<span class="aria-label-highlighted">aria-valuenow</span> attribute, not instead of it, unless
 						that value
@@ -459,7 +459,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 						but may be used for non-numeric values, such as college class level.
 					</p>
 				</section>
-				<section>
+				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 					<p>The values of <span class="aria-label-highlighted">aria-valuenow</span> for a 4-year college
 						could range
 						from 1 through 4, which indicate the position of each value in the value space. In this case,
