--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<li>Color Contrast (Background and text color) </li>
 						<!--- (addressing people with vision impairments and/or using technology in sunshine) -->
 						<li>Headings and Structure</li>
-						<li>accessible names for interactive elements</li>
+						<li>Accessible names for interactive elements</li>
 						<li>Responsive Design</li>
 						<li>Descriptive Links</li>
 						<li>Alternative Text (Alt Text)</li>
@@ -433,11 +433,9 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<section>
 				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 					<h2>aria-valuetext</h2>
-					<p>The <mark>aria-valuetext</mark> attribute defines the human-readable text alternative of
-						aria-valuenow
-						for a range widget.
-						Numbers — even percentages — aren't always user-friendly. Assistive technologies present <span
-							class="aria-label-highlighted">aria-valuenow</span> as numeric values. </p>
+					<blockquote id="aria-colindex">The <mark>aria-valuetext</mark> attribute defines the human-readable text alternative of
+						aria-valuenow for a range widget. Numbers — even percentages — aren't always user-friendly. Assistive technologies present <span
+							class="aria-label-highlighted">aria-valuenow</span> as numeric values. </blockquote>
 				</section>
 				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 					<p>If a progress bar is at 8%, what does that mean? <span class="aria-label-highlighted">aria-valuetext</span>
@@ -448,25 +446,17 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 				</section>
 				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 					<p>The <span class="aria-label-highlighted">aria-valuetext</span> attribute is used with the
-						<span class="aria-label-highlighted">aria-valuenow</span> attribute, not instead of it, unless
-						that value
-						is not known.
-						<span class="aria-label-highlighted">aria-valuetext</span> is only needed when the numeric value
-						of
-						<span class="aria-label-highlighted">aria-valuenow</span> is not meaningful. For example, a
-						range's values
-						are numeric
-						but may be used for non-numeric values, such as college class level.
+						<span class="aria-label-highlighted">aria-valuenow</span> attribute, not instead of it, unless that value is not known.
+						<span class="aria-label-highlighted">aria-valuetext</span> is only needed when the numeric value of
+						<span class="aria-label-highlighted">aria-valuenow</span> is not meaningful. For example, a range's values
+						are numeric	but may be used for non-numeric values, such as college class level.
 					</p>
 				</section>
 				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
 					<p>The values of <span class="aria-label-highlighted">aria-valuenow</span> for a 4-year college
-						could range
-						from 1 through 4, which indicate the position of each value in the value space. In this case,
-						the
+						could range from 1 through 4, which indicate the position of each value in the value space. In this case, the
 						<a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-valuetext"
-							target="_blank">aria-valuetext</a>
-						could be one of the strings: "first year", "sophomore", "junior", and "senior".
+						target="_blank">aria-valuetext</a> could be one of the strings: "first year", "sophomore", "junior", and "senior".
 					</p>
 				</section>
 			</section>
