Mawu section completed

--- a/index.html
+++ b/index.html
@@ -422,7 +422,50 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<!--End solo's Section-->
 
 			<!-- Mawu's Section-->
-			<section>slide 7</section>
+			<section>
+				<section><br><img src="assets/aria-document-role.png"></section>
+					<section class="title">
+					  ARIA Document Role
+					</section>
+					<section class="description">
+						An ARIA (Accessible Rich Internet Applications) 
+						document role is a way to specify the overall structure
+						or type of a document in web content for the purpose of web accessibility.
+						ARIA is a set of attributes that can be added to HTML elements to provide 
+						additional information to assistive technologies such as screen readers. 
+						The document role is a specific type of ARIA role that is used to define 
+						the role or type of a document within a web page.
+					</section>
+					<section class="description">
+						For example, you can use the role="document" 
+						attribute to indicate that a section of your 
+						web page represents a document. This can be helpful 
+						for screen reader users to understand the structure 
+						and purpose of content on a web page.
+					</section>
+					<section class="description">
+						Here's an example of how you might use it in HTML: <section><br><img src="assets/aria-document-role1.png"></section>
+						In this example, the role="document" attribute is applied 
+						to a div element to indicate that it represents a document. 
+						This helps assistive technologies convey the structure and purpose 
+						of the content to users who may have visual impairments.
+					</section>
+					<section class="description">
+					  It's important to note that the ARIA document role should only be used on focusable sections within complex composite widgets or applications.
+					</section>
+					<section class="subtitle">
+					  Testing and Debugging
+					</section>
+					<section class="description">
+					  To test and debug ARIA document roles, you can use tools like the Accessibility Inspector in Firefox or Chrome's Accessibility Developer Tools. These tools allow you to inspect the accessibility tree and view the roles and attributes of each element.
+					</section>
+					<section class="subtitle">
+					  Summary
+					</section>
+					<section class="description">
+						In summary, the ARIA document role is a tool to improve web accessibility by describing the role and structure of document-like content on a web page. It's part of a broader effort to make the web more inclusive and user-friendly for everyone, including those with disabilities
+					</section>
+			</section>
 			<!--End Mawu's Section-->
 
 			<!-- Mary's Section aria-errormessage-->
