--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			</section>
 			<section>
 				<section>
-					<p>what is A11Y?</p>
-					<p>A ccessibilit y </p>
+					<h2>what is A11Y?</h2>
+					<p>A-ccessibilit-y </p>
 					<p>A 11 y </p>
 				</section>
 				<section>
@@ -425,8 +425,15 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<section>slide 7</section>
 			<!--End Mawu's Section-->
 
-			<!-- Mary's Section aria-errormessage-->
-			<section>slide 8</section>
+			<!-- Mary's Section aria-describedby-->
+			<section class="aria-describedby">
+				<h2>aria-describedby</h2>
+				<section>
+					<p>Using the aria-describedby property to provide a additional descriptive label for user interface specially
+						screen readers, with more context or information about the element</p>
+				</section>
+			
+			</section>
 			<!--End Mary's Section-->
 
 			<!-- Vangelis' Section aria-valuetext-->
