--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 	<link rel="stylesheet" href="dist/reset.css">
 	<link rel="stylesheet" href="dist/reveal.css">
-	<link rel="stylesheet" href="dist/theme/black.css">
+	<!-- changed black theme to custom css for reveal.js customizations-->
+	<link rel="stylesheet" href="dist/theme/custom.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- prism for code styling -->
 	<!--<link rel="stylesheet" type="text/css"  href="css/prism.css">-->
@@ -19,8 +20,6 @@
 </head>
 
 <body>
-
-
 	<div class="reveal">
 		<div class="slides">
 			<!--title-->
@@ -32,8 +31,8 @@
 			</section>
 			<section>
 				<section>
-					<h2>what is A11Y?</h2>
-					<p>A-ccessibilit-y </p>
+					<p>what is A11Y?</p>
+					<p>A ccessibilit y </p>
 					<p>A 11 y </p>
 				</section>
 				<section>
@@ -46,7 +45,7 @@
 						<li>Color Contrast (Background and text color) </li>
 						<!--- (addressing people with vision impairments and/or using technology in sunshine) -->
 						<li>Headings and Structure</li>
-						<li>Accessible names for interactive elements</li>
+						<li>accessible names for interactive elements</li>
 						<li>Responsive Design</li>
 						<li>Descriptive Links</li>
 						<li>Alternative Text (Alt Text)</li>
@@ -422,91 +421,51 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<!--End solo's Section-->
 
 			<!-- Mawu's Section-->
-			<section>
-				<section><br><img src="assets/aria-document-role.png"></section>
-					<section class="title">
-					  ARIA Document Role
-					</section>
-					<section class="description">
-						An ARIA (Accessible Rich Internet Applications) 
-						document role is a way to specify the overall structure
-						or type of a document in web content for the purpose of web accessibility.
-						ARIA is a set of attributes that can be added to HTML elements to provide 
-						additional information to assistive technologies such as screen readers. 
-						The document role is a specific type of ARIA role that is used to define 
-						the role or type of a document within a web page.
-					</section>
-					<section class="description">
-						For example, you can use the role="document" 
-						attribute to indicate that a section of your 
-						web page represents a document. This can be helpful 
-						for screen reader users to understand the structure 
-						and purpose of content on a web page.
-					</section>
-					<section class="description">
-						Here's an example of how you might use it in HTML: <section><br><img src="assets/aria-document-role1.png"></section>
-						In this example, the role="document" attribute is applied 
-						to a div element to indicate that it represents a document. 
-						This helps assistive technologies convey the structure and purpose 
-						of the content to users who may have visual impairments.
-					</section>
-					<section class="description">
-					  It's important to note that the ARIA document role should only be used on focusable sections within complex composite widgets or applications.
-					</section>
-					<section class="subtitle">
-					  Testing and Debugging
-					</section>
-					<section class="description">
-					  To test and debug ARIA document roles, you can use tools like the Accessibility Inspector in Firefox or Chrome's Accessibility Developer Tools. These tools allow you to inspect the accessibility tree and view the roles and attributes of each element.
-					</section>
-					<section class="subtitle">
-					  Summary
-					</section>
-					<section class="description">
-						In summary, the ARIA document role is a tool to improve web accessibility by describing the role and structure of document-like content on a web page. It's part of a broader effort to make the web more inclusive and user-friendly for everyone, including those with disabilities
-					</section>
-			</section>
+			<section>slide 7</section>
 			<!--End Mawu's Section-->
 
-			<!-- Mary's Section aria-describedby-->
-			<section class="aria-describedby">
-				<h2>aria-describedby</h2>
-				<section>
-					<p>Using the aria-describedby property to provide a additional descriptive label for user interface specially
-						screen readers, with more context or information about the element</p>
-				</section>
-			
-			</section>
+			<!-- Mary's Section aria-errormessage-->
+			<section>slide 8</section>
 			<!--End Mary's Section-->
 
 			<!-- Vangelis' Section aria-valuetext-->
 			<section>
-				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
+				<section>
 					<h2>aria-valuetext</h2>
-					<blockquote id="aria-colindex">The <mark>aria-valuetext</mark> attribute defines the human-readable text alternative of
-						aria-valuenow for a range widget. Numbers — even percentages — aren't always user-friendly. Assistive technologies present <span
-							class="aria-label-highlighted">aria-valuenow</span> as numeric values. </blockquote>
+					<p>The <mark>aria-valuetext</mark> attribute defines the human-readable text alternative of
+						aria-valuenow
+						for a range widget.
+						Numbers — even percentages — aren't always user-friendly. Assistive technologies present <span
+							class="aria-label-highlighted">aria-valuenow</span> as numeric values. </p>
 				</section>
-				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
+				<section>
 					<p>If a progress bar is at 8%, what does that mean? <span class="aria-label-highlighted">aria-valuetext</span>
 						provides a way of presenting the current value in a more user-friendly,
 						human-understandable way. For example, a battery meter value might be conveyed as
 						<span class="aria-label-highlighted">aria-valuetext="8% (34 minutes) remaining"</span>.
 					</p>
 				</section>
-				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
+				<section>
 					<p>The <span class="aria-label-highlighted">aria-valuetext</span> attribute is used with the
-						<span class="aria-label-highlighted">aria-valuenow</span> attribute, not instead of it, unless that value is not known.
-						<span class="aria-label-highlighted">aria-valuetext</span> is only needed when the numeric value of
-						<span class="aria-label-highlighted">aria-valuenow</span> is not meaningful. For example, a range's values
-						are numeric	but may be used for non-numeric values, such as college class level.
+						<span class="aria-label-highlighted">aria-valuenow</span> attribute, not instead of it, unless
+						that value
+						is not known.
+						<span class="aria-label-highlighted">aria-valuetext</span> is only needed when the numeric value
+						of
+						<span class="aria-label-highlighted">aria-valuenow</span> is not meaningful. For example, a
+						range's values
+						are numeric
+						but may be used for non-numeric values, such as college class level.
 					</p>
 				</section>
-				<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
+				<section>
 					<p>The values of <span class="aria-label-highlighted">aria-valuenow</span> for a 4-year college
-						could range from 1 through 4, which indicate the position of each value in the value space. In this case, the
+						could range
+						from 1 through 4, which indicate the position of each value in the value space. In this case,
+						the
 						<a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-valuetext"
-						target="_blank">aria-valuetext</a> could be one of the strings: "first year", "sophomore", "junior", and "senior".
+							target="_blank">aria-valuetext</a>
+						could be one of the strings: "first year", "sophomore", "junior", and "senior".
 					</p>
 				</section>
 			</section>
