documented index.html
deleted extra spaces
added comments for section description

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 				<h2> group project</h2>
 				<p> cohort 02, in<strong id="tech">TECH</strong>gration </p>
 			</section>
+			<!-- web Accessibility section -->
 			<section>
 				<section>
 					<p>what is A11Y?</p>
@@ -52,6 +53,7 @@
 					</ul>
 				</section>
 			</section>
+			<!-- ARIA attribute Section -->
 			<section>
 				<section>
 					<h2>ARIA</h2>
@@ -401,7 +403,6 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<!--End Alex's Section-->
 
 			<!-- Meredith's Section aria-autocomplete -->
-
 			<section data-background-gradient="linear-gradient(to bottom, #00ffff, ##ffff66)">
 				<h2> Aria-autocomplete</h2>
 				<p>The aria-autocomplete attribute indicates whether inputting text could trigger display of one or more
@@ -421,7 +422,6 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<!--End solo's Section-->
 
 			<!-- Mawu's Section-->
-			<section>slide 7</section>
 			<section>
 				<section><br><img src="assets/aria-document-role.png"></section>
 				<section class="title">
@@ -474,8 +474,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			</section>
 			<!--End Mawu's Section-->
 
-			<!-- Mary's Section aria-describedby-->
-			
+			<!-- Mary's Section aria-describedby-->	
 			<section class="aria-describedby">
 				<h2>aria-describedby</h2>
 				<section>
@@ -534,7 +533,6 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 					</form>
 				</section>
 			</section>
-
 			<!--End Mary's Section-->
 
 			<!-- Vangelis' Section aria-valuetext-->
