deleted inline styling
since we are not using "data-background-gradient"

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 			<!--End Leo's Section-->
 
 			<!--Jason Section aria-colindex -->
-			<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
+			<section >
 				<section>
 					<h2>aria-colindex</h2>
 					<blockquote id="aria-colindex">The <mark>aria-colindex</mark> attribute defines an element's column
@@ -308,7 +308,7 @@
 			<!--End Jason's Section-->
 
 			<!-- Anna's Section aria-label -->
-			<section data-background-gradient="linear-gradient(to bottom, #1f1e1d, #A9A9A9)">
+			<section >
 				<section>
 					<h2 class="aria-label-heading">aria-label</h2>
 					<p>The <mark>aria-label</mark> should be used to provide a text alternative to an element that has
@@ -403,7 +403,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<!--End Alex's Section-->
 
 			<!-- Meredith's Section aria-autocomplete -->
-			<section data-background-gradient="linear-gradient(to bottom, #00ffff, ##ffff66)">
+			<section >
 				<h2> Aria-autocomplete</h2>
 				<p>The aria-autocomplete attribute indicates whether inputting text could trigger display of one or more
 					predictions of the user's intended value for a combobox, searchbox, or textbox and specifies how
