upadated index.html

--- a/index.html
+++ b/index.html
@@ -418,7 +418,16 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<!--End Meredith's Section-->
 
 			<!-- Solo's Section-->
-			<section>slide 6</section>
+			<section>
+				<h1>aria-checked</h1>
+				<h2>Chapter 1: The aria-checked</h2>
+				<p>
+					The aria-checked attribute indicates the current "checked" state of checkboxes, radio buttons, and other widgets.
+					Note: Where possible use an HTML element with type="checkbox" and type="radio" as these have built in semantics and do not require ARIA attributes.
+				  </p>
+				  <p> <a href="https://www.youtube.com/watch?v=0hqhAIjE_8I&t=545s">please have a look here </a>
+				
+			</section>
 			<!--End solo's Section-->
 
 			<!-- Mawu's Section-->
